testdata/baselines/reference/tests_cases_conformance_es6_destructuring_destructuringObjectBindingPatternAndAssignment4.ts.ast
SourceFile
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        ObjectBindingPattern
          BindingElement
            Identifier: '
    a'
            NumericLiteral
          BindingElement
            Identifier: '
    b'
            NumericLiteral
          BindingElement
            Identifier: '
    c'
            Identifier: ' b'
          BindingElement
            Identifier: ' // ok
    d'
            Identifier: ' a'
          BindingElement
            Identifier: ' // ok
    e'
            Identifier: ' f'
          BindingElement
            Identifier: ' // error
    f'
            Identifier: ' f'
        AsExpression
          ObjectLiteralExpression
          AnyKeyword
